# Baleiron_Marc_ExamenCPP

./: CMakeLists.txt  README.md
Ej_1/: P_N_C.cpp  P_N_C.h  main.cpp
Ej_2/: D_D_L_S.cpp  D_D_L_S.h  main.cpp
Ej_3/: C_P_C.cpp  C_P_C.h  main.cpp
Ej_4/: T_X_D.cpp  T_X_D.h  main.cpp
