cmake_minimum_required(VERSION 3.29)
project(Baleiron_Marc_ExamenCPP)

set(CMAKE_CXX_STANDARD 14)

add_executable(Baleiron_Marc_ExamenCPP
        Ej_1/main.cpp
        Ej_1/P_N_C.h
        Ej_1/P_N_C.cpp)

add_executable(Baleiron_Marc_ExamenCPP_Ej_2
        Ej_2/main.cpp
        Ej_2/D_D_L_S.h
        Ej_2/D_D_L_S.cpp)